# IoT-Greengrass-Predictive-Maintenance

./: .gitignore  README.md  package.json
1-atlas/: README.md
1-atlas/sample-data/: README.md  User.json  Vehicle.json
2-edge/: README.md
2-edge/1-docker/: README.md  helpers
2-edge/2-edge/cpp/consumer/: CMakeLists.txt  README.md  consumer.cpp
2-edge/3-aws-msk/: README.md
3-aws-greengrass-telemetry/: README.md
3-aws-greengrass-telemetry/greengrass-telemetry/: README.md  index.mjs  package.json
3-aws-lambda/endpoint-datastore/: README.md
3-aws-lambda/mdb-to-s3/: README.md  index.mjs
3-aws-lambda/mongo-subscription/: index.mjs  package.json
3. aws-greengrass-telemetry/: README.md
4-aws-lambda/endpoint-datastore/: README.md  index.mjs  package.json
4-aws-lambda/mdb-to-s3/: README.md  package.json
4-aws-lambda/mongo-subscription/: README.md  index.mjs
5-aws-sagemaker/predictive-maintenance/: README.md
5. aws-bedrock/: README.md
6-aws-bedrock/: README.md
6-mobile/fleet-mobile/: App.tsx
6-mobile/fleetmobile/: .graphqlconfig.yml  App.tsx  apollo.client.js  app.json  aws-exports.js  package.json  schema.json  sync.config.js
7-mobile/: README.md
7-web/: README.md
7-web/iot-fleet-web/: .graphqlconfig.yml  aws-exports.js  package.json  schema.json
8-lambda/function/: index.mjs  package.json
8-web/: README.md
aws-setup/: readme.md
edge/: README.md
greengrass-telemetry/: readme.md
infra/: README.md  cdk.context.json  package-lock.json  package.json
mobile/: README.md
mongodb-setup/: readme.md
web/: README.md
(+109 files in other folders)
